# granular-synthesizer

./: Adc.c  Adc.h  CMakeLists.txt  Dac.c  Dac.h  DisplayDraw.c  DisplayDraw.h  DisplayWrite.c  DisplayWrite.h  FilterCoeffs.h  FixedPoint.c  FixedPoint.h  KeyboardInterface.c  KeyboardInterface.h  Lab11Main.c  LcdInterface.c  LcdInterface.h  Logging.c  Logging.h  MicInterface.c  MicInterface.h  Music.c  Music.h  PLL.c  PLL.h  PortA.c  PortA.h  PortB.c  PortB.h  PortC.c  PortC.h  PortD.c  PortD.h  PortE.c  PortE.h  PortF.c  PortF.h  PortUtils.c  PortUtils.h  PotInterface.c  (+17 more)
